--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,12 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  /* background-color: #eee; */
+}
+
+.container {
+  width: 400px;
+  height: 400px;
+  margin: 100px auto;
 }
