--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,8 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  height: 100%;
 
   /* background-color: #eee; */
-}
-
-.container {
-  width: 400px;
-  height: 400px;
-  margin: 100px auto;
 }
